# Calorie-Calculator-App

./: README.md  calorie.py  design.txt  flask_app.py  main.py  pyproject.toml  scratch.py  scratch2.py  temperature.py
static/: main.css
templates/: calories_form_page.html  index.html
