[tool.poetry]
name = "6_calorie_webapp"
version = "0.1.0"
description = ""
authors = ["martinstajnko <stajnko.martin93@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
requests = "^2.26.0"
selectorlib = "^0.16.0"
beautifulsoup4 = "^4.10.0"
Flask = "^2.0.2"
WTForms = "^2.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
